feat(v3.3.2): MainMenuGUI hub, SellGUI with +/- price (Geyser-safe), JAR size -5MB (exclude SQLite Mac/Win native), Java 21 target