@@ -2,12 +2,13 @@ package dev.zerep.zeah.commands;
 
 import dev.zerep.zeah.ZeAuctionHouse;
 import dev.zerep.zeah.gui.MainAuctionGUI;
+import dev.zerep.zeah.gui.MainMenuGUI;
+import dev.zerep.zeah.gui.SellGUI;
 import dev.zerep.zeah.gui.ShopGUI;
 import org.bukkit.command.*;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class AHCommand implements CommandExecutor, TabCompleter {
@@ -28,39 +29,37 @@ public class AHCommand implements CommandExecutor, TabCompleter {
             player.sendMessage(plugin.getLang().format("no-permission")); return true;
         }
 
-        if (args.length == 0 || args[0].equalsIgnoreCase("browse")) {
-            int page = 0;
-            if (args.length >= 2) {
-                try { page = Math.max(0, Integer.parseInt(args[1]) - 1); }
-                catch (NumberFormatException ignored) {}
-            }
-            new MainAuctionGUI(plugin, player, page).open();
+        // /ah (no args) → main hub GUI
+        if (args.length == 0) {
+            new MainMenuGUI(plugin, player).open();
             return true;
         }
 
         switch (args[0].toLowerCase()) {
+
+            case "browse" -> {
+                int page = 0;
+                if (args.length >= 2) {
+                    try { page = Math.max(0, Integer.parseInt(args[1]) - 1); }
+                    catch (NumberFormatException ignored) {}
+                }
+                new MainAuctionGUI(plugin, player, page).open();
+            }
+
             case "sell" -> {
                 if (!player.hasPermission("zeah.sell")) {
                     player.sendMessage(plugin.getLang().format("no-permission")); return true;
                 }
-                if (args.length < 2) {
-                    player.sendMessage(plugin.getLang().format("auction.usage")); return true;
-                }
-                int price;
-                try {
-                    price = Integer.parseInt(args[1]);
-                    if (price <= 0) throw new NumberFormatException();
-                } catch (NumberFormatException e) {
-                    player.sendMessage(plugin.getLang().format("invalid-number", "input", args[1])); return true;
-                }
-                plugin.getAuctionManager().startSell(player, price);
+                new SellGUI(plugin, player).open();
             }
+
             case "claim" -> {
                 if (!player.hasPermission("zeah.claim")) {
                     player.sendMessage(plugin.getLang().format("no-permission")); return true;
                 }
                 plugin.getDeliveryManager().claimAll(player);
             }
+
             case "shop" -> {
                 if (!plugin.getConfig().getBoolean("shop.enabled", true)) {
                     player.sendMessage(plugin.getLang().format("shop.not-enabled")); return true;
@@ -70,7 +69,10 @@ public class AHCommand implements CommandExecutor, TabCompleter {
                 }
                 new ShopGUI(plugin, player).open();
             }
-            case "mylistings", "my", "list" -> new dev.zerep.zeah.gui.MyListingsGUI(plugin, player).open();
+
+            case "mylistings", "my", "list" ->
+                new dev.zerep.zeah.gui.MyListingsGUI(plugin, player).open();
+
             case "reload" -> {
                 if (!player.hasPermission("zeah.admin")) {
                     player.sendMessage(plugin.getLang().format("no-permission")); return true;
@@ -78,7 +80,8 @@ public class AHCommand implements CommandExecutor, TabCompleter {
                 plugin.reload();
                 player.sendMessage(plugin.getLang().format("plugin-reload"));
             }
-            default -> player.sendMessage(plugin.getLang().format("auction.usage"));
+
+            default -> new MainMenuGUI(plugin, player).open();
         }
         return true;
     }
@@ -86,12 +89,8 @@ public class AHCommand implements CommandExecutor, TabCompleter {
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command cmd,
                                       @NotNull String label, @NotNull String[] args) {
-        if (args.length == 1) {
-            return Arrays.asList("browse", "sell", "claim", "shop", "mylistings", "reload");
-        }
-        if (args.length == 2 && args[0].equalsIgnoreCase("sell")) {
-            return List.of("<price>");
-        }
+        if (args.length == 1)
+            return List.of("browse", "sell", "claim", "shop", "mylistings", "reload");
         return List.of();
     }
 }
